HTTP4Hybrid/Backends.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotaday
spec:
  selector:
    matchLabels:
      app: quotaday
  replicas: 2
  template:
    metadata:
      labels:
        app: quotaday
    spec:
      containers:
        - name: quotaday
          image: quay.io/fgiudici/quotaday:v0.2.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: quotaday
  labels:
    app: quotaday
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: quotaday
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotaday2
spec:
  selector:
    matchLabels:
      app: quotaday2
  replicas: 1
  template:
    metadata:
      labels:
        app: quotaday2
    spec:
      containers:
        - name: quotaday
          image: quay.io/fgiudici/quotaday:v0.2.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: quotaday2
  labels:
    app: quotaday2
spec:
  ports:
  - port: 8088
    protocol: TCP
    targetPort: 80
  selector:
    app: quotaday2
