HTTP4Hybrid/02-Gateway.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: kong-hybrid
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: konnect-hybrid
    namespace: default
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: zonkey-gw
spec:
  gatewayClassName: kong-hybrid
  listeners:
  - name: http
    protocol: HTTP
    port: 80
#   hostname: *.sslip.io
