HTTP4Hybrid/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-echo
  namespace: default
spec:
#  hostnames:
#    - test.zonkey.test
#    - *.sslip.io
  parentRefs:
    - name: kong-zonkey01
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /echo
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Match-Rule
                value: echo
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: X-Reply
                value: from-echo
      backendRefs:
        - name: echo
          kind: Service
          port: 8080
          weight: 2
        - name: echo2
          kind: Service
          port: 8088
          weight: 4
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Match-Rule
                value: root
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: X-Reply
                value: from-root
      backendRefs:
        - name: echo
          kind: Service
          port: 8080
          weight: 2
        - name: echo2
          kind: Service
          port: 8088
          weight: 4
